<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.d3m0li5h3r.nanodegree.zero.projectzero.MainActivity">

    <TextView
        android:id="@+id/label_my_apps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/label_nanodegree_apps"
        android:textAppearance="@android:style/TextAppearance.Medium"
        app:layout_constraintLeft_toLeftOf="@+id/button_material"
        app:layout_constraintRight_toRightOf="@+id/button_material"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_movies"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:text="@string/app_movies"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/label_my_apps"
        app:layout_constraintLeft_toLeftOf="@+id/button_material"
        app:layout_constraintRight_toRightOf="@+id/button_material" />

    <Button
        android:id="@+id/button_stock"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/app_stock"
        app:layout_constraintLeft_toLeftOf="@+id/button_material"
        app:layout_constraintRight_toRightOf="@+id/button_material"
        app:layout_constraintTop_toBottomOf="@+id/button_movies" />

    <Button
        android:id="@+id/button_build_bigger"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/app_build_bigger"
        app:layout_constraintTop_toBottomOf="@+id/button_stock"
        app:layout_constraintLeft_toLeftOf="@+id/button_material"
        app:layout_constraintRight_toRightOf="@+id/button_material" />

    <Button
        android:id="@+id/button_material"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/app_material"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/button_build_bigger"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button_ubiquitous"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/app_ubiquitous"
        app:layout_constraintLeft_toLeftOf="@+id/button_material"
        app:layout_constraintRight_toRightOf="@+id/button_material"
        app:layout_constraintTop_toBottomOf="@+id/button_material" />

    <Button
        android:id="@+id/button_capstone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/app_capstone"
        app:layout_constraintTop_toBottomOf="@+id/button_ubiquitous"
        app:layout_constraintRight_toRightOf="@+id/button_material"
        app:layout_constraintLeft_toLeftOf="@+id/button_material" />
</android.support.constraint.ConstraintLayout>
